# Akademik-Not-Paylasma

./: .replit  CNAME  main.py  pyproject.toml
instance/: akademik_platform.db
static/css/: style.css
templates/: base.html  create_note.html  edit_profile.html  index.html  login.html  messages.html  notifications.html  profile.html  register.html  search.html  search_results.html  send_message.html  view_note.html  welcome.html
